--- a/site.css
+++ b/site.css
@@ -1,13 +1,4 @@
 body{
-    background-color: black;
+    background-color: grey;
 };
-.btn1{
-    color: aqua;
-    align-items: end;
-};
-.div1{
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    color: azure;
-};
+
