--- a/site.css
+++ b/site.css
@@ -25,4 +25,34 @@ h2{
     background-image: black;
    
 }
+.container{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    color: aliceblue;
+    font-size: 26px;
+
+}
+.grafic1{
+    display: flex;
+    width: 29%;
+    height: 100%;
+    text-align: center;
+}
+.grafic2{
+    display: flex;
+    width: 56%;
+    height: 100%;
+    text-align: center;
+}
+.grafic3{
+    display: flex;
+    width: 15%;
+    height: 100%;
+    text-align: center;
+}
+h3{
+    color: black;
+    text-decoration: underline 2px black;
+}
 
