--- a/site.css
+++ b/site.css
@@ -1,5 +1,5 @@
-body{
-    background-color: aquamarine;
+#body{
+    background-color: rgb(123, 27, 161);
 }
 
 .btn{
@@ -10,6 +10,12 @@ body{
     padding-left: 70px;
     
     
+}
+
+#theme{
+    border: solid 2px;
+    border-color: #f1f1f1;
+    border-radius: 100%;
 }
 
 .slogan {
@@ -23,6 +29,7 @@ h2{
     text-decoration: underline 2px white;
     position: fixed;
     top:0;
+    padding-left: 20px;
 }
 
 .nav{
@@ -63,6 +70,7 @@ h2{
 h3{
     color: black;
     text-decoration: underline 2px black;
+    
 }
 .btnG{
     background-color: aliceblue;
@@ -83,4 +91,49 @@ li{
 }
 ul{
     list-style-type: none;
+    margin-left: 38%;
+    overflow: hidden;
 }
+
+.dropdown{
+    cursor: pointer;
+    background-color: black;
+
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(123, 27, 161);
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
