--- a/site.css
+++ b/site.css
@@ -37,6 +37,7 @@ h2{
     width: 100%;
     height: max-content;
     display: flex;
+    
    
 }
 
@@ -137,3 +138,16 @@ li a, .dropbtn {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+footer{
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 200px;
+    margin-top: 20%;
+}
+
+#about{
+    float: right;
+    
+}
